Updated to custom 4.x version